# franzmq

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: command_ack.py  isa95_topics.py  log_handler.py  priority_callbacks.py  quickstart.py  quickstart_paho.py  wildcards_monitor.py
src/franzmq/: __init__.py  client.py  log_handlers.py  message.py  topic.py  topic_base.py  utils.py
src/franzmq/data_contracts/: __init__.py  base.py
src/franzmq/data_contracts/base/: __init__.py  client.py  log_handlers.py  payload.py
tests/: test.py  test_publish.py
